--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,10 @@
 .header {
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid rgb(217, 213, 213);
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 100px;
+
 }
 
 .anchor {
