--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,11 @@
 .container {
-  text-align: center;
+  min-height: 100vh;
+  max-width: 700px;
+  padding: 0 0.5rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .h1 {
